--- a/notebooks/DataPipelineDemo.ipynb
+++ b/notebooks/DataPipelineDemo.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "3885b1b2",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "1e44375e",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "c90df663",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "19af3067",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "c8e43241",
    "metadata": {},
    "outputs": [
@@ -184,18 +184,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'steven': [0.8], 'isaac': [1.0], 'ebert': [1.0], '_average': [0.9333333333333332]}\n"
+      "{'ebert': [1.0], 'steven': [0.8], 'isaac': [1.0], '_average': [0.9333333333333332]}\n",
+      "{'bladerunner': 0}\n"
      ]
     }
    ],
    "source": [
-    "authors = list(database.get_keys())\n",
     "projection_databse = ProjectionDatastoreFactory(projection_filepath = f'../data/projection.json', \n",
     "                 movie_indices_filepath = f'../data/movie_indices.json').build()\n",
     "projection_engine = ProjectionEngine(\n",
     "    database, projection_databse)\n",
     "projection_engine.create_projection()\n",
-    "print(projection_databse.get())"
+    "print(projection_databse.get())\n",
+    "print(projection_databse.get_movie_indices())"
    ]
   },
   {
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "ddce93ba",
    "metadata": {},
    "outputs": [
@@ -216,7 +217,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('steven', [Review(author='steven', movie='bladerunner', rating=0.8), Review(author='steven', movie='clerks', rating=0.6)])\n"
+      "('steven', [Review(author='steven', movie='bladerunner', rating=0.8), Review(author='steven', movie='clerks', rating=0.6)])\n",
+      "('ebert', [Review(author='ebert', movie='bladerunner', rating=1.0), Review(author='ebert', movie='clerks', rating=0.75)])\n"
      ]
     }
    ],
@@ -224,8 +226,19 @@
     "match_generator = MatchGeneratorFactory(database, projection_databse).build()\n",
     "user_input = {'bladerunner': 0.4}\n",
     "match = match_generator.get_match(user_input)\n",
+    "print(match)\n",
+    "user_input = {'bladerunner': 1.0}\n",
+    "match = match_generator.get_match(user_input)\n",
     "print(match)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a6dcaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
