In memory projection db

--- a/notebooks/DataPipelineDemo.ipynb
+++ b/notebooks/DataPipelineDemo.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3885b1b2",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1e44375e",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c90df663",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "19af3067",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "c8e43241",
    "metadata": {},
    "outputs": [
@@ -184,14 +184,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ebert': [1.0], 'steven': [0.8], 'isaac': [1.0], '_average': [0.9333333333333332]}\n",
+      "{'steven': [0.8], 'ebert': [1.0], 'isaac': [1.0], '_average': [0.9333333333333332]}\n",
       "{'bladerunner': 0}\n"
      ]
     }
    ],
    "source": [
     "projection_databse = ProjectionDatastoreFactory(projection_filepath = f'../data/projection.json', \n",
-    "                 movie_indices_filepath = f'../data/movie_indices.json').build()\n",
+    "                 movie_indices_filepath = f'../data/movie_indices.json', in_memory=True).build()\n",
     "projection_engine = ProjectionEngine(\n",
     "    database, projection_databse)\n",
     "projection_engine.create_projection()\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ddce93ba",
    "metadata": {},
    "outputs": [
