Cleanup main datastore

--- a/notebooks/DataPipelineDemo.ipynb
+++ b/notebooks/DataPipelineDemo.ipynb
@@ -36,51 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d284b367",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (1.4.3)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from pandas) (1.23.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from pandas) (2022.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/Cellar/six/1.16.0_2/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
-      "You should consider upgrading via the '/usr/local/Cellar/jupyterlab/3.4.3/libexec/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
-      "Collecting boto3\n",
-      "  Using cached boto3-1.24.36-py3-none-any.whl (132 kB)\n",
-      "Collecting jmespath<2.0.0,>=0.7.1\n",
-      "  Using cached jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
-      "Collecting botocore<1.28.0,>=1.27.36\n",
-      "  Using cached botocore-1.27.36-py3-none-any.whl (9.0 MB)\n",
-      "Collecting s3transfer<0.7.0,>=0.6.0\n",
-      "  Using cached s3transfer-0.6.0-py3-none-any.whl (79 kB)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from botocore<1.28.0,>=1.27.36->boto3) (1.26.9)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from botocore<1.28.0,>=1.27.36->boto3) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/Cellar/six/1.16.0_2/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.28.0,>=1.27.36->boto3) (1.16.0)\n",
-      "Installing collected packages: jmespath, botocore, s3transfer, boto3\n",
-      "Successfully installed boto3-1.24.36 botocore-1.27.36 jmespath-1.0.1 s3transfer-0.6.0\n",
-      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
-      "You should consider upgrading via the '/usr/local/Cellar/jupyterlab/3.4.3/libexec/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'status': 'ok', 'restart': True}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install pandas\n",
     "%pip install boto3\n",
@@ -104,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1e44375e",
    "metadata": {},
    "outputs": [],
@@ -112,7 +71,7 @@
     "# Internal imports\n",
     "sys.path.append(\"..\")\n",
     "from app.ingestion.dataframe_ingestion_client import DataframeIngestionClient\n",
-    "from app.ingestion.main_datastore_proxy import MainDatastoreProxy\n",
+    "from app.ingestion.main_datastore_factory import MainDatastoreFactory\n",
     "from app.projection.projection_engine import ProjectionEngine\n",
     "from app.projection.projection_datastore_factory import ProjectionDatastoreFactory\n",
     "from app.recommendation.match_generator_factory import MatchGeneratorFactory"
@@ -130,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c90df663",
    "metadata": {},
    "outputs": [],
@@ -141,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "19af3067",
    "metadata": {},
    "outputs": [
@@ -160,7 +119,7 @@
    ],
    "source": [
     "data = pd.read_csv(filepath, header=0)\n",
-    "database = MainDatastoreProxy(in_memory=True)\n",
+    "database = MainDatastoreFactory(in_memory=True).build()\n",
     "client = DataframeIngestionClient(database)\n",
     "client.upload(data)\n",
     "print(data)"
@@ -176,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c8e43241",
    "metadata": {},
    "outputs": [
@@ -184,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'steven': [0.8], 'ebert': [1.0], 'isaac': [1.0], '_average': [0.9333333333333332]}\n",
+      "{'isaac': [1.0], 'ebert': [1.0], 'steven': [0.8], '_average': [0.9333333333333332]}\n",
       "{'bladerunner': 0}\n"
      ]
     }
@@ -209,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ddce93ba",
    "metadata": {},
    "outputs": [
@@ -218,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "('steven', [Review(author='steven', movie='bladerunner', rating=0.8), Review(author='steven', movie='clerks', rating=0.6)])\n",
-      "('ebert', [Review(author='ebert', movie='bladerunner', rating=1.0), Review(author='ebert', movie='clerks', rating=0.75)])\n"
+      "('isaac', [Review(author='isaac', movie='bladerunner', rating=1.0)])\n"
      ]
     }
    ],
