--- a/notebooks/DataPipelineDemo.ipynb
+++ b/notebooks/DataPipelineDemo.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "3885b1b2",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "1e44375e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
     "sys.path.append(\"..\")\n",
     "from app.ingestion.dataframe_ingestion_client import DataframeIngestionClient\n",
     "from app.ingestion.main_datastore_factory import MainDatastoreFactory\n",
-    "from app.projection.projection_engine import ProjectionEngine\n",
+    "from app.projection.projection_engine_factory import ProjectionEngineFactory\n",
     "from app.projection.projection_datastore_factory import ProjectionDatastoreFactory\n",
     "from app.recommendation.match_generator_factory import MatchGeneratorFactory"
    ]
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "c90df663",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "19af3067",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "c8e43241",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'isaac': [1.0], 'ebert': [1.0], 'steven': [0.8], '_average': [0.9333333333333332]}\n",
+      "{'steven': [0.8], 'isaac': [1.0], 'ebert': [1.0], '_average': [0.9333333333333332]}\n",
       "{'bladerunner': 0}\n"
      ]
     }
@@ -151,8 +151,8 @@
    "source": [
     "projection_databse = ProjectionDatastoreFactory(projection_filepath = f'../data/projection.json', \n",
     "                 movie_indices_filepath = f'../data/movie_indices.json', in_memory=True).build()\n",
-    "projection_engine = ProjectionEngine(\n",
-    "    database, projection_databse)\n",
+    "projection_engine = ProjectionEngineFactory(\n",
+    "    database, projection_databse).build()\n",
     "projection_engine.create_projection()\n",
     "print(projection_databse.get())\n",
     "print(projection_databse.get_movie_indices())"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "ddce93ba",
    "metadata": {},
    "outputs": [
@@ -190,14 +190,6 @@
     "match = match_generator.get_match(user_input)\n",
     "print(match)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82a6dcaf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
