--- a/notebooks/DataPipelineDemo.ipynb
+++ b/notebooks/DataPipelineDemo.ipynb
@@ -36,13 +36,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d284b367",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (1.4.3)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from pandas) (1.23.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/Cellar/six/1.16.0_2/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
+      "You should consider upgrading via the '/usr/local/Cellar/jupyterlab/3.4.3/libexec/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: boto3 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (1.24.36)\n",
+      "Requirement already satisfied: botocore<1.28.0,>=1.27.36 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from boto3) (1.27.36)\n",
+      "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from boto3) (1.0.1)\n",
+      "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from boto3) (0.6.0)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from botocore<1.28.0,>=1.27.36->boto3) (2.8.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from botocore<1.28.0,>=1.27.36->boto3) (1.26.9)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/Cellar/six/1.16.0_2/lib/python3.10/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.28.0,>=1.27.36->boto3) (1.16.0)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
+      "You should consider upgrading via the '/usr/local/Cellar/jupyterlab/3.4.3/libexec/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "Collecting minio\n",
+      "  Using cached minio-7.1.11-py3-none-any.whl (76 kB)\n",
+      "Requirement already satisfied: certifi in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from minio) (2022.6.15)\n",
+      "Requirement already satisfied: urllib3 in /usr/local/Cellar/jupyterlab/3.4.3/libexec/lib/python3.10/site-packages (from minio) (1.26.9)\n",
+      "Installing collected packages: minio\n",
+      "Successfully installed minio-7.1.11\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.2 is available.\n",
+      "You should consider upgrading via the '/usr/local/Cellar/jupyterlab/3.4.3/libexec/bin/python3.10 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'ok', 'restart': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%pip install pandas\n",
     "%pip install boto3\n",
+    "%pip install minio\n",
     "\n",
     "import IPython\n",
     "IPython.Application.instance().kernel.do_shutdown(True)"
@@ -50,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "3885b1b2",
    "metadata": {},
    "outputs": [],
@@ -63,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "1e44375e",
    "metadata": {},
    "outputs": [],
@@ -89,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "c90df663",
    "metadata": {},
    "outputs": [],
@@ -100,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "19af3067",
    "metadata": {},
    "outputs": [
@@ -135,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "c8e43241",
    "metadata": {},
    "outputs": [
@@ -143,19 +188,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'steven': [0.8], 'isaac': [1.0], 'ebert': [1.0], '_average': [0.9333333333333332]}\n",
-      "{'bladerunner': 0}\n"
+      "{'bladerunner': 0}\n",
+      "Shard 0: {'steven': [0.8], 'isaac': [1.0], 'ebert': [1.0], '_average': [0.9333333333333332]}\n"
      ]
     }
    ],
    "source": [
-    "projection_databse = ProjectionDatastoreFactory(projection_filepath = f'../data/projection.json', \n",
-    "                 movie_indices_filepath = f'../data/movie_indices.json', in_memory=True).build()\n",
+    "projection_databse = ProjectionDatastoreFactory(in_memory=True).build()\n",
     "projection_engine = ProjectionEngineFactory(\n",
     "    database, projection_databse).build()\n",
     "projection_engine.create_projection()\n",
-    "print(projection_databse.get())\n",
-    "print(projection_databse.get_movie_indices())"
+    "print(projection_databse.get_movie_indices())\n",
+    "\n",
+    "for index, shard in enumerate(projection_databse.get_shards()):\n",
+    "    print(\"Shard \" + str(index) + \": \" + str(shard.get_all()))"
    ]
   },
   {
@@ -168,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "ddce93ba",
    "metadata": {},
    "outputs": [
