--- a/notebooks/DataPipelineDemo.ipynb
+++ b/notebooks/DataPipelineDemo.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "1e44375e",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
     "from app.ingestion.main_datastore_factory import MainDatastoreFactory\n",
     "from app.projection.projection_engine_factory import ProjectionEngineFactory\n",
     "from app.projection.projection_datastore_factory import ProjectionDatastoreFactory\n",
-    "from app.recommendation.match_generator_factory import MatchGeneratorFactory"
+    "from app.recommendation.generator_factory_facade import GeneratorFactoryFacade"
    ]
   },
   {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "c8e43241",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
     }
    ],
    "source": [
-    "match_generator = MatchGeneratorFactory(database, projection_databse).build()\n",
+    "match_generator = GeneratorFactoryFacade(database, projection_databse, in_memory=True).build()\n",
     "user_input = {'bladerunner': 0.4}\n",
     "match = match_generator.get_match(user_input)\n",
     "print(match)\n",
@@ -236,6 +236,14 @@
     "match = match_generator.get_match(user_input)\n",
     "print(match)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b499aea0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
