remove actions for now, taking too much compute

--- a/notebooks/ShardScalingDemo.ipynb
+++ b/notebooks/ShardScalingDemo.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0f2a04f7",
+   "metadata": {},
+   "source": [
+    "# Sharding Demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "89c68584",
    "metadata": {},
    "source": [
-    "If you haven't already run DataPipelineDemo, do that first. This is a deep dive into how the backend scales with additional data. "
+    "<img src=\"../images/projection.png\"/>\n",
+    "\n",
+    "\n",
+    "* If you haven't already run DataPipelineDemo, do that first. This is a deep dive into how the backend scales with additional data. "
    ]
   },
   {
